--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
+    "react-hook-form": "^7.45.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
